HADOOP-8185. Update namenode -format documentation and add -nonInteractive and -force. Contributed by Arpit Gupta.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1333142 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -148,6 +148,8 @@ Release 2.0.0 - UNRELEASED
 
     HADOOP-7549. Use JDK ServiceLoader mechanism to find FileSystem implementations. (tucu)
 
+    HADOOP-8185. Update namenode -format documentation and add -nonInteractive and -force. (Arpit Gupta via atm)
+
   OPTIMIZATIONS
 
   BUG FIXES
