--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -152,6 +152,9 @@ Release 2.0.0 - UNRELEASED
 
     HADOOP-8214. make hadoop script recognize a full set of deprecated commands (rvs via tucu)
 
+    HADOOP-8347. Hadoop Common logs misspell 'successful'.
+    (Philip Zeyliger via eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
