svn merge -c 1334013 FIXES: MAPREDUCE-4048. NullPointerException exception while accessing the Application Master UI (Devaraj K via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1334014 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -343,6 +343,9 @@ Release 0.23.3 - UNRELEASED
 
     MAPREDUCE-4163. consistently set the bind address (Daryn Sharp via bobby)
 
+    MAPREDUCE-4048. NullPointerException exception while accessing the
+    Application Master UI (Devaraj K via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
