--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -172,6 +172,9 @@ Release 2.0.0 - UNRELEASED
     MAPREDUCE-3173. MRV2 UI doesn't work properly without internet (Devaraj K
     via bobby)
 
+    MAPREDUCE-3958. RM: Remove RMNodeState and replace it with NodeState
+    (Bikas Saha via bobby)
+
 Release 0.23.3 - UNRELEASED
 
   INCOMPATIBLE CHANGES
