HDFS-3365. Enable users to disable socket caching in DFS client configuration. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1335221 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -283,6 +283,9 @@ Release 2.0.0 - UNRELEASED
     HDFS-2617. Replaced Kerberized SSL for image transfer and fsck
     with SPNEGO-based solution. (jghoman, tucu, and atm via eli)
 
+    HDFS-3365. Enable users to disable socket caching in DFS client
+    configuration (todd)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
