svn merge -c 1335258 from trunk for HADOOP-8359.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1335262 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -297,6 +297,9 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8328. Duplicate FileSystem Statistics object for 'file' scheme.
     (tomwhite)
 
+    HADOOP-8359. Fix javadoc warnings in Configuration.  (Anupam Seth via
+    szetszwo)
+
   BREAKDOWN OF HADOOP-7454 SUBTASKS
 
     HADOOP-7455. HA: Introduce HA Service Protocol Interface. (suresh)
