HDFS-3328. svn merge -c 1336480 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1336481 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -512,6 +512,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3157. Error in deleting block is keep on coming from DN even after 
     the block report and directory scanning has happened. (Ashish Singhi via umamahesh)
 
+    HDFS-3328. NPE in DataNode.getIpcPort. (eli)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
