--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -167,6 +167,9 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8340. SNAPSHOT build versions should compare as less than their eventual
     final release. (todd)
 
+    HADOOP-8361. Avoid out-of-memory problems when deserializing strings.
+    (Colin Patrick McCabe via eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
