HDFS-3400. svn merge -c 1337017 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1337018 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -312,6 +312,9 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-3401. Cleanup DatanodeDescriptor creation in the tests. (eli)
 
+    HDFS-3400. DNs should be able start with jsvc even if security is disabled.
+    (atm via eli)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
