HDFS-3026. HA: Handle failure during HA state transition. Contributed by Aaron T. Myers.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1337031 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -532,6 +532,8 @@ Release 2.0.0 - UNRELEASED
     necessarily a BlockInfoUnderConstruction, so do not cast it in
     FSNamesystem.recoverLeaseInternal(..).  (szetszwo)
 
+    HDFS-3026. HA: Handle failure during HA state transition. (atm)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
