HADOOP-8353. hadoop-daemon.sh and yarn-daemon.sh can be misleading on stop. Contributed by Roman Shaposhnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1337252 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -173,6 +173,9 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8361. Avoid out-of-memory problems when deserializing strings.
     (Colin Patrick McCabe via eli)
 
+    HADOOP-8353. hadoop-daemon.sh and yarn-daemon.sh can be misleading on stop.
+    (Roman Shaposhnik via atm)
+
   OPTIMIZATIONS
 
   BUG FIXES
