svn merge -c 1337415 from trunk for adding HADOOP-8113 to CHANGES.txt.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1337416 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -179,6 +179,9 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8224. Don't hardcode hdfs.audit.logger in the scripts.
     (Tomohiko Kinebuchi via eli)
 
+    HADOOP-8113. Correction to BUILDING.txt: HDFS needs ProtocolBuffer, too
+    (not just MapReduce). Contributed by Eugene Koontz.
+
   OPTIMIZATIONS
 
   BUG FIXES
