svn merge -c 1310649 from trunk for HDFS-3211. Add fence(..) and replace NamenodeRegistration with JournalInfo and epoch in JournalProtocol.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1337423 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -315,6 +315,9 @@ Release 2.0.0 - UNRELEASED
     HDFS-3400. DNs should be able start with jsvc even if security is disabled.
     (atm via eli)
 
+    HDFS-3211. Add fence(..) and replace NamenodeRegistration with JournalInfo
+    and epoch in JournalProtocol. (suresh via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
