svn merge -c 1329319 from trunk for HADOOP-8285 Use ProtoBuf for RpcPayLoadHeader.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1337428 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -182,6 +182,8 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8113. Correction to BUILDING.txt: HDFS needs ProtocolBuffer, too
     (not just MapReduce). Contributed by Eugene Koontz.
 
+    HADOOP-8285 Use ProtoBuf for RpcPayLoadHeader (sanjay radia)
+
   OPTIMIZATIONS
 
   BUG FIXES
