svn merge -c 1337283 from trunk for HADOOP-8366 Use ProtoBuf for RpcResponseHeader.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1337430 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -184,6 +184,8 @@ Release 2.0.0 - UNRELEASED
 
     HADOOP-8285 Use ProtoBuf for RpcPayLoadHeader (sanjay radia)
 
+    HADOOP-8366 Use ProtoBuf for RpcResponseHeader (sanjay radia)
+
   OPTIMIZATIONS
 
   BUG FIXES
