HDFS-3419. svn merge -c 1338802 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1338805 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -332,6 +332,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3416. Cleanup DatanodeID and DatanodeRegistration
     constructors used by testing. (eli)
 
+    HDFS-3419. Cleanup LocatedBlock. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
