HADOOP-8398. svn merge -c 1338806 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1338807 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -186,6 +186,8 @@ Release 2.0.0 - UNRELEASED
 
     HADOOP-8366 Use ProtoBuf for RpcResponseHeader (sanjay radia)
 
+    HADOOP-8398. Cleanup BlockLocation. (eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
